<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    android:background="@drawable/appback"
    android:paddingTop="15dp"
    tools:context=".Myprofile">

    <!-- Profile Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="187dp"
        android:layout_height="280dp"
        android:contentDescription="@string/profile_image"
        app:srcCompat="@drawable/dp"
        android:backgroundTint="@color/design_default_color_surface"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="26dp"
        android:layout_marginStart="24dp" />

    <!-- Name -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-black"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Role -->
    <TextView
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/role"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="@id/textView2"
        android:layout_marginTop="10dp" />

    <!-- Social Icons Row -->
    <LinearLayout
        android:id="@+id/socialRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/linkedinButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:contentDescription="@string/linkedin_icon"
            android:src="@drawable/linkedin"
            android:focusable="true"
            android:clickable="true"
            android:layout_marginEnd="24dp" />

        <ImageButton
            android:id="@+id/githubButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:contentDescription="@string/github_icon"
            android:src="@drawable/github1"
            android:focusable="true"
            android:clickable="true" />
    </LinearLayout>

    <!-- Bio Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="#56B8E2"
        app:layout_constraintTop_toBottomOf="@id/socialRow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/cert1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:text="@string/bio"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Portfolio Button -->
    <Button
        android:id="@+id/details"
        android:layout_width="171dp"
        android:layout_height="68dp"
        android:layout_marginTop="24dp"
        android:text="@string/portfolio_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextText" />

</androidx.constraintlayout.widget.ConstraintLayout>